// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BillActions BillActions: isBill === false 1`] = `
initialize {
  "0": Object {
    "attribs": Object {
      "aria-disabled": "false",
      "aria-label": "Add as bill",
      "class": "MuiButtonBase-root MuiIconButton-root",
      "role": "button",
      "tabindex": "0",
      "title": "Add as bill",
    },
    "children": Array [
      Object {
        "attribs": Object {
          "class": "MuiIconButton-label",
        },
        "children": Array [
          Object {
            "attribs": Object {
              "aria-hidden": "true",
              "class": "MuiSvgIcon-root",
              "focusable": "false",
              "viewBox": "0 0 24 24",
            },
            "children": Array [
              Object {
                "attribs": Object {
                  "d": "M13 7h-2v4H7v2h4v4h2v-4h4v-2h-4V7zm-1-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z",
                },
                "children": Array [],
                "name": "path",
                "namespace": "http://www.w3.org/2000/svg",
                "next": null,
                "parent": [Circular],
                "prev": null,
                "type": "tag",
                "x-attribsNamespace": Object {
                  "d": undefined,
                },
                "x-attribsPrefix": Object {
                  "d": undefined,
                },
              },
            ],
            "name": "svg",
            "namespace": "http://www.w3.org/2000/svg",
            "next": null,
            "parent": [Circular],
            "prev": null,
            "type": "tag",
            "x-attribsNamespace": Object {
              "aria-hidden": undefined,
              "class": undefined,
              "focusable": undefined,
              "viewBox": undefined,
            },
            "x-attribsPrefix": Object {
              "aria-hidden": undefined,
              "class": undefined,
              "focusable": undefined,
              "viewBox": undefined,
            },
          },
        ],
        "name": "span",
        "namespace": "http://www.w3.org/1999/xhtml",
        "next": null,
        "parent": [Circular],
        "prev": null,
        "type": "tag",
        "x-attribsNamespace": Object {
          "class": undefined,
        },
        "x-attribsPrefix": Object {
          "class": undefined,
        },
      },
    ],
    "name": "span",
    "namespace": "http://www.w3.org/1999/xhtml",
    "next": null,
    "parent": null,
    "prev": null,
    "root": Object {
      "attribs": Object {},
      "children": Array [
        [Circular],
      ],
      "name": "root",
      "namespace": "http://www.w3.org/1999/xhtml",
      "next": null,
      "parent": null,
      "prev": null,
      "type": "root",
      "x-attribsNamespace": Object {},
      "x-attribsPrefix": Object {},
    },
    "type": "tag",
    "x-attribsNamespace": Object {
      "aria-disabled": undefined,
      "aria-label": undefined,
      "class": undefined,
      "role": undefined,
      "tabindex": undefined,
      "title": undefined,
    },
    "x-attribsPrefix": Object {
      "aria-disabled": undefined,
      "aria-label": undefined,
      "class": undefined,
      "role": undefined,
      "tabindex": undefined,
      "title": undefined,
    },
  },
  "_root": [Circular],
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "normalizeWhitespace": false,
    "withDomLvl1": true,
    "xml": false,
  },
}
`;

exports[`BillActions BillActions: isBill === true 1`] = `
initialize {
  "0": Object {
    "attribs": Object {
      "aria-disabled": "false",
      "aria-label": "Remove bill",
      "class": "MuiButtonBase-root MuiIconButton-root",
      "role": "button",
      "tabindex": "0",
      "title": "Remove bill",
    },
    "children": Array [
      Object {
        "attribs": Object {
          "class": "MuiIconButton-label",
        },
        "children": Array [
          Object {
            "attribs": Object {
              "aria-hidden": "true",
              "class": "MuiSvgIcon-root",
              "focusable": "false",
              "viewBox": "0 0 24 24",
            },
            "children": Array [
              Object {
                "attribs": Object {
                  "d": "M7 11v2h10v-2H7zm5-9C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z",
                },
                "children": Array [],
                "name": "path",
                "namespace": "http://www.w3.org/2000/svg",
                "next": null,
                "parent": [Circular],
                "prev": null,
                "type": "tag",
                "x-attribsNamespace": Object {
                  "d": undefined,
                },
                "x-attribsPrefix": Object {
                  "d": undefined,
                },
              },
            ],
            "name": "svg",
            "namespace": "http://www.w3.org/2000/svg",
            "next": null,
            "parent": [Circular],
            "prev": null,
            "type": "tag",
            "x-attribsNamespace": Object {
              "aria-hidden": undefined,
              "class": undefined,
              "focusable": undefined,
              "viewBox": undefined,
            },
            "x-attribsPrefix": Object {
              "aria-hidden": undefined,
              "class": undefined,
              "focusable": undefined,
              "viewBox": undefined,
            },
          },
        ],
        "name": "span",
        "namespace": "http://www.w3.org/1999/xhtml",
        "next": null,
        "parent": [Circular],
        "prev": null,
        "type": "tag",
        "x-attribsNamespace": Object {
          "class": undefined,
        },
        "x-attribsPrefix": Object {
          "class": undefined,
        },
      },
    ],
    "name": "span",
    "namespace": "http://www.w3.org/1999/xhtml",
    "next": null,
    "parent": null,
    "prev": null,
    "root": Object {
      "attribs": Object {},
      "children": Array [
        [Circular],
      ],
      "name": "root",
      "namespace": "http://www.w3.org/1999/xhtml",
      "next": null,
      "parent": null,
      "prev": null,
      "type": "root",
      "x-attribsNamespace": Object {},
      "x-attribsPrefix": Object {},
    },
    "type": "tag",
    "x-attribsNamespace": Object {
      "aria-disabled": undefined,
      "aria-label": undefined,
      "class": undefined,
      "role": undefined,
      "tabindex": undefined,
      "title": undefined,
    },
    "x-attribsPrefix": Object {
      "aria-disabled": undefined,
      "aria-label": undefined,
      "class": undefined,
      "role": undefined,
      "tabindex": undefined,
      "title": undefined,
    },
  },
  "_root": [Circular],
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "normalizeWhitespace": false,
    "withDomLvl1": true,
    "xml": false,
  },
}
`;
